upd: version file

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "luobata-util",
     "version": "0.0.1",
     "description": "",
-    "main": "dist/luobata-util.js",
-    "module": "dist/luobata-util.esm.js",
+    "main": "dist/util.js",
+    "module": "dist/util.esm.js",
+    "types": "src/index.d.ts",
     "scripts": {
         "build": "node build/build.js",
         "build:esm": "rollup -c build/rollup.config.js && rm -rf .rpt2_cache",
